[package]
name = "pikapool-api"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
use = "0.0.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = "0.22.1"
lazy_static = "1.4.0"
eip-712 = { git = "https://github.com/0xPikapool/EIP-712" }
rustc-hex = "2.1.0"
ethers = "1.0.2"

[package.metadata.lambda.deploy]
memory = 256                   # Function's memory
timeout = 120                  # Function's execution timeout
tracing = "active"             # Tracing mode
# role = "role-full-arn"         # Function's execution role
env_file = ".env"   # File to load environment variables from
layers = [                     # List of layers to deploy with your function
    "layer-full-arn"
]
